styles.css
/* CSS by Victoria DeSimone */
/* Color Palette
  deep blue = #010326
  midnight green = #024959
  teal = #208C8C
  seafoam green = #89D9C2
  black = #0D0D0D
  white = white
*/

/* GLOBAL (base) MOBILE FIRST */
* {
  font-family: serif;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  color: #0D0D0D;
}

body {
  display: grid;
  grid-template-columns: 1fr;
  background-color: #208C8C;
}

header, nav, footer {
  display: flex;
  background-color: #010326;
}
header, footer {
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}
header h1, header p, footer p {
  color: white;
}
header, nav, main, footer {
  padding: 2rem;
}
header h1 {
  font-size: 3rem;
}
h2 {
  font-size: 1.75rem;
}
h3 {
  font-size: 1.5rem;
}
h4 {
  font-size: 1.3rem;
}
p, a, li {
  font-size: 1.25rem;
}

nav {
  padding-top: 0rem;
}
nav ul, #follow ul {
  gap: 0.2rem;
}
nav ul, nav li, nav a {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}
nav ul, #follow ul, #projects {
  list-style: none;
}
nav a, #projects .card-row .website a {
  justify-content: center;
  align-items: center;
  padding: 1rem 1.35rem;
  background-color: #208C8C;
  text-decoration: none;
}
nav a:hover, 
#follow a:hover,
#projects .card-row .website a:hover {
  background-color: #024959;
  color: white;
  text-decoration: underline;
}

main {
  background-color: #024959;
}
main, main section, main section div {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}
main section {
  padding: 1rem;
  background-color: #208C8C;
}
#follow ul,
#follow li,
#follow a {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}
#follow a {
  justify-content: center;
  align-items: center;
  padding: 1rem 2.5rem;
  background-color: #89D9C2;
  text-decoration: none;
}

img {
  border: 2px solid #0D0D0D;
}

#about, #projects section{
  flex-direction: column;
}
#about div,
#resume div,
#resume #employment p {
  display: flex;
  flex-direction: column;
  padding: 1rem;
}
#about div,
#projects .card-row section,
#resume div,
#resume p {
  background-color: #89D9C2;
}

#projects .card-row,
#projects .card-row section {
  display: flex;
  flex: 1;
}
#projects .card-row h3 {
  text-decoration: underline;
}
#projects .card-row .desc h4,
#projects .card-row .desc p {
  display: flex;
  align-items: center
}
#projects .card-row div {
  gap: 0.5rem;
}
#projects .card-row .website p,
#projects .card-row .website a {
  display: flex;
  flex-grow: 1;
 }
#projects .tech-stack ul,
#resume section ul {
  padding-left: 1.5rem;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

#resume div p {
  font-weight: bold;
}

/* ===== Media Query (Medium) ===== */
@media screen and (min-width: 612px) {
  nav ul, 
  nav li, 
  nav a,
  main section div,
  #welcome,
  #follow ul,
  #follow li,
  #follow a {
    flex-direction: row;
  }

  #welcome div,
  #resume div {
    flex-direction: column;
  }
}

